# nginx-lua-script

./: docker-compose.yml  memo.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  network.sh  postStartCommand.sh
app/: Dockerfile  app.py
nginx/: Dockerfile  nginx.conf
nginx/lua_scripts/: main.lua
